# tsp-opt

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  setup.sh
etc/docker/: Dockerfile.dev  docker-compose_dev_local_wsl2.yml
src/: __init__.py
src/app_service/: __init__.py
src/controller/: __init__.py
src/domain/: __init__.py
src/domain/model/: __init__.py  coordinate.py
src/domain/model/schema/: __init__.py  location.py  locations.py  mixin.py
src/domain/service/: __init__.py
src/infra/: __init__.py  _base.py
src/infra/db_adapter/: __init__.py
src/infra/repository/: __init__.py  location.py
src/infra/storage_adapter/: __init__.py  local.py
tests/integration_test/: test_repository.py
tests/integration_test/input_data/: locations.csv
tests/unit_test/domain/model/: test_coordinate.py
