[project]
name = "tsp-opt"
version = "0.1.0"
description = "A simple TSP optimization library"
authors = []
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8.2",
    "polars>=1.5.0",
    "pandera>=0.20.3",
    "numpy>=2.1.0",
    "scipy>=1.14.1",
    "pulp>=2.9.0",
    "cartopy>=0.23.0",
    "plotly>=5.23.0",
    "geopy>=2.4.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "jupyterlab>=4.2.4",
    "ipywidgets>=8.1.3",
]
